--- a/michigan.scss
+++ b/michigan.scss
@@ -29,7 +29,6 @@ $text-muted: #4c6782;
 $code_highlight_color: #FFCB05;
 $background_color: #FFFFFF;
 $text_font_size: 1rem;
-$code_font_size: 1rem;
 $header_h1_font_size: 1.75rem;
 $header_h2_font_size: 1.5rem;
 $header_h3_font_size: 1.25rem;
@@ -42,23 +41,16 @@ $callout-color-note: #2F65A7;
 $callout-color-tip: #A5A508;
 $callout-color-caution: #FFCB05;
 $callout-color-warning: #D86018;
-$callout-color-important: #FFCB05;
+$callout-color-important: #9A3324;
 
 /*-- PRESENTATIONS --*/
 
-/*-- change menue logo to block M --*/
-
+/*-- make menue logo the block M --*/
 .reveal .slide-menu-button .fa-bars::before {
   background-image: url('https://brand.umich.edu/assets/brand/downloads/um-logos/primary_logo_kit/black-logo/u-m_logo-black.png') !important;
 }
 
 /*-- scss:rules --*/
-.reveal pre code {
-  background-color: #42affa;
-  font-size: 1em;
-  padding: 1em;
-  line-height: 1.1em;
-}
 
 
 .transparent {
@@ -121,12 +113,27 @@ p {
   border-left: 3px solid $text-muted;
   padding-left: 1em;
   font-style: italic;
-  font-weight: bold;
   color: #4c6782;
 }
+
+.reveal li { padding: 5px 0px; }
 
 .reveal ol li:first-child:nth-last-child(n + 10),
 .reveal ol li:first-child:nth-last-child(n + 10) ~ li {
   margin-left: 1em;
+}
+
+ul li:first-child,
+ol li:first-child {
+  margin-top: 0; // No extra space at the end
+}
+
+ul, ol {
+  li {
+    margin-bottom: 0.0em; // Adjust as needed
+    padding-bottom: 0.0em;
+    line-height: 1.1; // Or greater for more space
+    gap: 0.0em;
+  }
 }
 
